crates/crap-core/src/adapters/reporters/snapshots/crap_core__adapters__reporters__scorecard_row__tests__green_scorecard_row_snapshot.snap
---
source: crates/crap-core/src/adapters/reporters/scorecard_row.rs
assertion_line: 195
expression: out
---
{
  "type": "CrapDelta",
  "id": "crap_delta",
  "label": "CRAP Δ",
  "anchor": "crap-delta",
  "status": "Green",
  "threshold": 15,
  "delta_count": 0,
  "delta_text": "5 → 5"
}
